--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="PanopticRecon++: Leverage Cross-Attention for End-to-End Open-Vocabulary Panoptic Reconstruction">
-  <meta name="keywords" content="Autonomous Driving, NeRF, multiple cameras">
+        content="RISED">
+  <meta name="keywords" content="Robotics">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>PanopticRecon++: Leverage Cross-Attention for End-to-End Open-Vocabulary Panoptic Reconstruction</title> 
+  <title>RISED</title> 
   <!-- <br>ICML2024 -->
   
   <!-- Global site tag (gtag.js) - Google Analytics -->
