--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="Robotics">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>RISED</title> 
-  <!-- <br>ICML2024 -->
+
   
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
@@ -123,8 +123,8 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Leverage Cross-Attention for End-to-End Open-Vocabulary Panoptic Reconstruction</h1>
-          <!-- <h1 class="is-size-4 publication-authors">IROS 2024 (Oral)</h1> -->
+          <h1 class="title is-1 publication-title">RISED: Accurate and Efficient RGB-Colorized Mapping Using Image Selection and Point Cloud Densification</h1>
+          <h1 class="is-size-4 publication-authors">ICRA 2025</h1>
 
           <div class="columns is-centered has-text-centered">
           <!-- <div class="column is-four-fifths"> -->
