--- a/index.html
+++ b/index.html
@@ -99,14 +99,11 @@
           More Research
         </a>
         <div class="navbar-dropdown">
-          <a class="navbar-item" href="https://yuxuan1206.github.io/NFAtlas/">
-            NF-Atlas
+          <a class="navbar-item" href="https://ietresearch.onlinelibrary.wiley.com/doi/10.1049/csy2.12116/">
+            ER-Mapping
           </a>
-          <a class="navbar-item" href="https://yuxuan1206.github.io/PanopticRecon/">
-            PanopticRecon
-          </a>
-          <a class="navbar-item" href="https://github.com/YunxuanMao/ngel_slam">
-            NGEL-SLAM
+          <a class="navbar-item" href="https://changjianjiang01.github.io/LI-GS/">
+            LI-GS
           </a>
           </a>
         </div>
