--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
 
           <div class="columns is-centered has-text-centered">
           <!-- <div class="column is-four-fifths"> -->
-            <div class="content has-text-justified">
+<!--             <div class="content has-text-justified">
               <img src="./static/images/logo.png"
               width="120">
-            </div>
+            </div> -->
           <!-- </div> -->
         </div>
 
