--- a/index.html
+++ b/index.html
@@ -135,30 +135,22 @@
 
           <div class="is-size-5 publication-authors">
             <!-- Paper authors -->
-            <span class="author-block"> 
-             Xuan Yu</a><sup>1</sup>,</span>
-              <span class="author-block">
-                Yuxuan Xie</a><sup>1</sup>,</span>
-              <span class="author-block"> 
-                 Yili Liu</a><sup>1</sup>,</span>
+            <span class="author-block">
+               <a href="https://ywang-zju.github.io/" target="_blank">Changjian Jiang</a>,</span>
+                <span class="author-block">
+                  Ruilan Gao</a>,</span>
                   <span class="author-block">
-                    <a href="https://scholar.google.com.hk/citations?user=RiX5SJUAAAAJ&hl=zh-CN" target="_blank">Sitong Mao</a><sup>2</sup>,</span>
+                    Kele Shao</a>,</span>
                       <span class="author-block">
-                        <a href="https://scholar.google.com/citations?user=d5qY3q0AAAAJ&hl=en" target="_blank">Shunbo Zhou</a><sup>2</sup>,</span>
-                        <span class="author-block">
-                          <a href="https://scholar.google.com.hk/citations?user=dNAbVgIAAAAJ&hl=zh-CN" target="_blank">Haojian Lu</a><sup>1</sup>,</span>
+                        <a href="https://ywang-zju.github.io/" target="_blank">Yue Wang</a>,</span>
                           <span class="author-block">
-                            <a href="https://scholar.google.com/citations?user=1hI9bqUAAAAJ&hl=en" target="_blank">Rong Xiong</a><sup>1</sup>,</span>
-                                <span class="author-block">
-                                  <a href="https://yiyiliao.github.io/" target="_blank">Yiyi Liao</a><sup>1</sup>,</span>
-                                      <span class="author-block">
-                                        <a href="https://ywang-zju.github.io/" target="_blank">Yue Wang</a><sup>1</sup><sup>*</sup>
+                            <a href="https://mypage.zju.edu.cn/rongxiong" target="_blank">Rong Xiong</a>,</span>
+                              <span class="author-block">
+                                  <span class="author-block">
+                                    <a href="https://person.zju.edu.cn/zhangyu/" target="_blank">Yu Zhang</a><sup>*</sup></span>
                                       </div>
 
-          <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>Zhejiang University,</span>
-            <span class="author-block"><sup>2</sup>Huawei,</span>
-          </div>
+ 
 
           <div class="column has-text-centered">
             <div class="publication-links">
