--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <div class="is-size-5 publication-authors">
             <!-- Paper authors -->
             <span class="author-block">
-               <a href="https://ywang-zju.github.io/" target="_blank">Changjian Jiang</a>,</span>
+               <a href="https://scholar.google.com/citations?hl=en&user=V4miywEAAAAJ" target="_blank">Changjian Jiang</a>,</span>
                 <span class="author-block">
                   Ruilan Gao</a>,</span>
                   <span class="author-block">
