--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
   <link rel="stylesheet" href="./static/css/index.css">
-  <link rel="icon" href="./static/images/logo.png">
+  <link rel="icon" href="./static/images/git_icon.ico">
   <link rel="stylesheet" type="text/css" href="./static/css/test.css">
   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -202,7 +202,7 @@
       <!-- <h2 class="title is-3">Method</h2>  -->
       <div class="container">
         <video poster="" id="steve" autoplay controls muted loop playsinline height="100%">
-         <source src="./static/videos/teaser.mp4"
+         <source src="./static/videos/RISED_icra_video_v5_for_web_compress.mp4"
                  type="video/mp4">
         </video>
   <!--/ Paper video. -->
