--- a/index.html
+++ b/index.html
@@ -226,10 +226,10 @@
 
     <br>
 
-    <!-- Motivation. -->
+    <!-- Method -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Motivation</h2>
+        <h2 class="title is-3">Method</h2>
         <div class="content has-text-justified">
         
           <img src="./static/images/motivation.png">
