--- a/index.html
+++ b/index.html
@@ -137,10 +137,12 @@
             <!-- Paper authors -->
             <span class="author-block">
                <a href="https://scholar.google.com/citations?hl=en&user=V4miywEAAAAJ" target="_blank">Changjian Jiang</a>,</span>
-                <span class="author-block">
-                  Ruilan Gao</a>,</span>
+                 <span class="author-block">
+                    Lijie Wang,</a>,</span>    
                   <span class="author-block">
-                    Kele Shao</a>,</span>
+                    Zeyu Wan,</a>,</span>    
+                    <span class="author-block">
+                      Ruilan Gao</a>,</span>
                       <span class="author-block">
                         <a href="https://ywang-zju.github.io/" target="_blank">Yue Wang</a>,</span>
                           <span class="author-block">
