--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 </section>
 
 
-  <!-- Method -->
+  <!-- Result -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Result</h2>
