--- a/index.html
+++ b/index.html
@@ -275,7 +275,38 @@
 </section>
 
 
-
+<!-- Image carousel -->
+<section class="hero is-small">
+  <div class="hero-body">
+    <div class="container">
+      <div id="results-carousel" class="carousel results-carousel">
+       <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/system.png" alt="MY ALT TEXT"/>
+        <h2 class="subtitle has-text-centered">
+         The performance of LI-GS. (a) The comprehensive mesh of a campus scene, with its details shown in (b)-(e). (f) Our data collection platform. (g)-(h) The rendered RGB image and the colorized mesh of an indoor scene.
+        </h2>
+      </div>
+      <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/color1.png" alt="MY ALT TEXT"/>
+        <h2 class="subtitle has-text-centered">
+          Geometric quality comparison of different methods in outdoor and indoor scenes. Each row shows the results of a scene using different methods, and the colorized boxes emphasize the surface details.
+      </div>
+       <div class="item">
+        <!-- Your image here -->
+        <img src="static/images/color2.png" alt="MY ALT TEXT"/>
+        <h2 class="subtitle has-text-centered">
+         Generating meshes by combining LiDAR point clouds with images effectively overcomes the sparsity and uneven distribution of the original colorized point clouds. Additionally, image information can complement areas beyond the LiDAR field of view to enhance the completeness of the reconstructed model.
+        </h2>
+       </div>
+ 
+ 
+  </div>
+</div>
+</div>
+</section>
+<!-- End image carousel -->
 
 
 
