--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           More Research
         </a>
         <div class="navbar-dropdown">
-          <a class="navbar-item" href="https://ietresearch.onlinelibrary.wiley.com/doi/10.1049/csy2.12116/">
+          <a class="navbar-item" href="https://ietresearch.onlinelibrary.wiley.com/doi/10.1049/csy2.12116">
             ER-Mapping
           </a>
           <a class="navbar-item" href="https://changjianjiang01.github.io/LI-GS/">
@@ -123,14 +123,14 @@
           <h1 class="title is-1 publication-title">RISED: Accurate and Efficient RGB-Colorized Mapping Using Image Selection and Point Cloud Densification</h1>
           <h1 class="is-size-4 publication-authors">ICRA 2025</h1>
 
-          <div class="columns is-centered has-text-centered">
+<!--           <div class="columns is-centered has-text-centered"> -->
           <!-- <div class="column is-four-fifths"> -->
 <!--             <div class="content has-text-justified">
               <img src="./static/images/logo.png"
               width="120">
             </div> -->
           <!-- </div> -->
-        </div>
+<!--         </div> -->
 
 
           <div class="is-size-5 publication-authors">
@@ -151,6 +151,11 @@
                                   <span class="author-block">
                                     <a href="https://person.zju.edu.cn/zhangyu/" target="_blank">Yu Zhang</a><sup>*</sup></span>
                                       </div>
+
+          <div class="is-size-5 publication-authors">
+                    <span class="author-block">Zhejiang University</span>
+                    <span class="eql-cntrb"><small><br><sup>*</sup>Corresponding Author</small></span>
+          </div>
 
  
 
