--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                   </span>
-                  <span>Arxiv(coming soon)</span>
+                  <span>Paper(coming soon)</span>
                 </a>
               </span>
               <!-- Video Link. -->
@@ -178,7 +178,7 @@
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
                   </span>
-                  <span>Video</span>
+                  <span>YouTube</span>
                 </a>
               </span>
               <!-- Code Link. -->
